@@ -1,3 +1,3 @@
 # StudyTrialJavaGUI
 
-This is a source codes of Java GUI from Bro Code's Java GUI Tutorial 
+Go to Run and Debug > Create launch.json file > "vmArgs": "--module-path C:/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib --add-modules javafx.controls,javafx.fxml", 
